Write write write

--- a/latex/all_usepackages.tex
+++ b/latex/all_usepackages.tex
@@ -53,5 +53,5 @@
 % Dark
 %\definecolor{myBGcolor}{HTML}{3E3535}
 %\definecolor{myTextcolor}{HTML}{CFECEC}
-\pagecolor{myBGcolor}
+%\pagecolor{myBGcolor}
 %\color{myTextcolor}
