--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -46,16 +46,16 @@
 
 \mainmatter
 
-%\include{introduction}
-%\include{related_work}
-%\include{rbffd_method}
-%\include{ordering_and_preconditioning}
+\include{introduction}
+\include{related_work}
+\include{rbffd_method}
+\include{ordering_and_preconditioning}
 \include{gpu_solver}
 \include{distributed_solver}
 
 \include{future_of_gpus.tex}
-%\include{explicit_pde_solutions}
-%\include{implicit_pde_solutions}
+\include{explicit_pde_solutions}
+\include{implicit_pde_solutions}
 %\include{performance_analysis} 
 %\include{publications}
 
